fix nav-bar bg-color alignment and prep other pages

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -19,7 +19,7 @@ body {
 div #nav-bg-color {
 	/* border: 2px dotted #ddd; */
 	height:60px;
-	position: relative;
+	position: fixed;
 }
 
 
@@ -34,9 +34,7 @@ div #nav-bg-color {
 	display:inline;
 }
 
-.width {
-	width: 100%;
-}
+
 
 
 
@@ -44,9 +42,10 @@ div #nav-bg-color {
 	text-align: right;
 	height: 60px;
 	width: 100%;
-	float:center;
+	/* float:center; */
 	margin: 0px auto 0px auto;
 	position: fixed; 
+	/*border: 1px solid red; */
 }
 
 
@@ -114,6 +113,7 @@ div #nav-bg-color {
 	background-color: #313036;
 	width: 100%;
 	margin-bottom: 20px;
+	/* border: 1px solid #313036; */
 }
 
 #nav-bg-color li {
@@ -135,27 +135,29 @@ div #nav-bg-color {
 .user-boxes {
 	width: 960px;
 	margin: 100px auto 20px auto;
+	border: 2px solid red;
 }
+
 
 #sermons {
 	width: 200px;
 	height: 246px;
-	margin-right:60px;
-	margin-left: 60px;
+	margin-right:40px;
+	margin-left: 40px;
 }
 
 #email-list{
 	width: 200px;
 	height: 246px;
-	margin-right: 60px;
-	margin-left: 60px;
+	margin-right: 80px;
+	margin-left: 40px;
 }
 
 #calendar {
 	width: 200px;
 	height: 246px;
-	margin-left: 60px;
-	margin-right: 60px;
+	margin-left: 40px;
+	margin-right: 80px;
 }
 
 fieldset {
